@@ -914,9 +914,11 @@ TclInitCompileEnv(
     envPtr->extCmdMapPtr->neiloc = 0;
     envPtr->extCmdMapPtr->nueiloc = 0;
 
-    if (invoker == NULL) {
+    if ((invoker == NULL) ||
+	(invoker->type == TCL_LOCATION_EVAL_LIST)) {
         /*
-	 * Initialize the compiler for relative counting.
+	 * Initialize the compiler for relative counting in case of a
+	 * dynamic context.
 	 */
 
 	envPtr->line = 1;
